Bugzilla bug 233321: fixed the problem with building utf8.c as a standalone test program.  Fixed byte-order issue on little-endian architecture. r=nelsonb. Modified Files: Makefile utf8.c